# hyq2max-description

./: CMakeLists.txt  mainpage.dox  package.xml
gazebo/: gazebo.urdf.xacro
launch/: hyq2max_empty_world.launch  hyq2max_rviz.launch  rviz.launch  upload.launch  upload_hyq2max.launch  world.launch
meshes/leg/: hip.stl  hipassembly.dae  lower.stl  lowerleg.dae  upperleg.dae  upperleg.stl
meshes/trunk/: trunk.dae  trunk.stl
robcogen/: hyq2max.kindsl
robots/: hyq2max.urdf.xacro  hyq2max_model.urdf.xacro
rviz/: hyq2max_model_tf.rviz
scripts/: go0
urdfs/: common.xacro  common_optionshyqReal.xacro  common_optionshyqReal_big4.xacro
urdfs/leg/: leg.gazebo.xacro  leg.urdf.xacro
urdfs/sensors/: asus_xtion.urdf.xacro  bumblebee.urdf.xacro  kinect.urdf.xacro  microstrain_3dmgx325_imu.urdf.xacro  ptu_d46.urdf.xacro  velodyne.urdf.xacro  vislab_3dve.urdf.xacro
urdfs/trunk/: trunk.urdf.xacro  trunk_model.urdf.xacro
